--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "mime-types": "^2.1.10",
     "muxrpc": "^6.2.1",
     "pull-cat": "^1.1.9",
-    "pull-identify-filetype": "^1.0.2",
+    "pull-identify-filetype": "^1.1.0",
     "pull-serializer": "^0.3.2",
     "pull-stream": "^3.2.0",
     "pull-ws-server": "^1.5.0",
@@ -17,9 +17,12 @@
     "stack": "^0.1.0",
     "stream-to-pull-stream": "^1.6.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browserify": "^13.0.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-ws-client": "browserify ws-client.js > ws-client.build.js"
   },
   "author": "Paul Fraze <pfrazee@gmail.com>",
   "license": "MIT"
